--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,3 @@
-
 html {
     box-sizing: border-box;
 }
@@ -7,4 +6,244 @@ html {
 *::before,
 *::after {
     box-sizing: inherit;
+}
+
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Regular.woff2") format("woff2"), url("../fonts/Quicksand-Regular.woff") format("woff"),
+        url("../fonts/Quicksand-Regular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Medium.woff2") format("woff2"), url("../fonts/Quicksand-Medium.woff") format("woff"),
+        url("../fonts/Quicksand-Medium.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Bold.woff2") format("woff2"), url("../fonts/Quicksand-Bold.woff") format("woff"),
+        url("../fonts/Quicksand-Bold.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+}
+
+body {
+    margin: 0;
+}
+
+$light__blue: #0674ec;
+$font: "Quicksand";
+
+.container {
+    max-width: 1170px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.header {
+    font-family: $font;
+    font-weight: 400;
+    background-color: #eef1f3;
+    .header__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100px;
+        &__logo {
+            width: 200px;
+            height: 50px;
+        }
+
+        .header__become {
+            padding: 7px 9px;
+            color: #fff;
+            text-decoration: none;
+            width: 140px;
+            height: 36px;
+            background-color: $light__blue;
+            border-radius: 50px;
+        }
+
+        .header__icons {
+            .header__noti,
+            .header__mail,
+            .header__cart {
+                border: none;
+                position: relative;
+                outline: none;
+                cursor: pointer;
+            }
+
+            .header__noti::before,
+            .header__mail::before,
+            .header__cart::before {
+                content: "";
+                color: #ffffff;
+                width: 22px;
+                height: 22px;
+                display: block;
+                border-radius: 50%;
+                position: absolute;
+                z-index: 1;
+            }
+
+            .header__noti::after,
+            .header__mail::after,
+            .header__cart::after {
+                position: absolute;
+                bottom: 20px;
+                color: #ffffff;
+                z-index: 2;
+            }
+
+            .header__noti::before {
+                background-color: #ff6a6c;
+                left: 16.8px;
+                bottom: 17px;
+            }
+
+            .header__noti::after {
+                content: "25";
+                right: -3px;
+            }
+
+            .header__mail::before {
+                background-color: #62d03b;
+                left: 17.7px;
+                bottom: 17px;
+            }
+
+            .header__mail::after {
+                content: "6";
+                right: 0px;
+            }
+
+            .header__cart::before {
+                background-color: #0674ec;
+                left: 20px;
+                bottom: 17px;
+            }
+
+            .header__cart::after {
+                content: "2";
+                right: -3px;
+            }
+        }
+
+        .header__profile {
+            text-decoration: none;
+            display: flex;
+            .profile__img {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+            }
+
+            .profile__info {
+                margin-left: 20px;
+                margin-top: 5px;
+
+                .profile__name {
+                    font-family: $font;
+                    font-weight: 500;
+                    flex-wrap: wrap;
+                    width: 100px;
+                    color: #333333;
+                }
+
+                .profile__money {
+                    color: #0674ec;
+                    font-weight: 400;
+                }
+            }
+        }
+    }
+}
+
+.navigation {
+    height: 80px;
+    .navigation__inner {
+        display: inline-block;
+        width: 68%;
+
+        .navigation__menu {
+            font-family: $font;
+            font-weight: 500;
+            font-size: 15px;
+            line-height: 30px;
+            color: #333333;
+            list-style: none;
+            display: flex;
+            padding-left: 0;
+            text-transform: uppercase;
+
+            .navigation__points {
+                padding-right: 35px;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+.search__inner {
+    font-family: $font;
+    font-weight: 400;
+    color: #898f96;
+    font-size: 15px;
+    line-height: 30px;
+    display: inline-block;
+    border: 1px solid #d9dfe5;
+    border-radius: 50px;
+    width: 31%;
+    margin: 17px 0;
+
+    .search__form {
+        z-index: 1;
+        position: relative;
+        .search__form-input {
+            height: 45px;
+            padding-left: 25px;
+            border-radius: 50%;
+            border: none;
+            outline: none;
+        }
+
+        .search__form-btn {
+            position: absolute;
+            height: 47px;
+            top: -1px;
+            width: 70px;
+            right: 0px;
+            border-radius: 50px;
+            background-color: $light__blue;
+            border: none;
+            outline: none;
+            cursor: pointer;
+        }
+
+        .search__form-btn::before {
+            content: "";
+            background-image: url(../img/magnifier.svg);
+            width: 25px;
+            height: 25px;
+            position: absolute;
+            background-repeat: no-repeat;
+            bottom: 7.5px;
+            right: 18px;
+        }
+    }
+}
+
+.create {
+    height: 735px;
+    background-color: #294dcf;
 }
