--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -39,10 +39,179 @@ body {
     padding: 40px 30px;
     background-color: #ffffff;
     border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+    -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
 }
 
 .rate-star {
     display: inline-block !important;
     margin-right: 13px;
     background-image: url(../img/rate-star.svg);
+}
+
+.card {
+    margin-top: 30px;
+    background-color: #fff;
+    max-width: 360px;
+    -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+    -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    position: relative;
+
+    .more,
+    .live {
+        display: none;
+        width: 0;
+        height: 0;
+        
+    }
+
+    &:hover {
+        
+        .more,
+        .live {
+            display: flex;
+            position: absolute;
+            top: 95px;
+            left: 45px;
+            color: #fff;
+            font-weight: 500;
+            font-size: 15px;
+            width: 130px;
+            height: 45px;
+            background-color: $light__blue;
+            border-radius: 50px;
+            transition: linear 0.5s;
+
+            &:hover {
+                color: $light__blue;
+                background-color: #fff;
+            }
+        }
+
+        .more {
+            padding: 13px 26px;
+        }
+
+        .live {
+            left: 185px;
+            padding: 13px 26px;
+        }
+    }
+
+    .img {
+        max-width: 360px;
+        max-height: 230px;
+        background-size: cover;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+    }
+
+    .content {
+        padding: 23px 30px 15px;
+        border-bottom: 1px solid #ececec;
+    }
+
+    .content__title {
+        display: flex;
+        width: 100%;
+        padding: 0 0 20px;
+        flex-direction: column;
+        font-size: 20px;
+        font-weight: 500;
+        color: #000;
+    }
+
+    .text {
+        font-size: 16px;
+        line-height: 30px;
+        color: #555555;
+        padding-bottom: 25px;
+    }
+
+    .author {
+        display: flex;
+        .author__img {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            margin-bottom: 25px;
+        }
+
+        .author__name {
+            padding-left: 10px;
+            padding-right: 50px;
+            font-size: 15px;
+            line-height: 30px;
+            color: #000;
+        }
+
+        .author__tech {
+            display: inline-block;
+            font-size: 15px;
+            line-height: 30px;
+            color: #7347c1;
+            position: relative;
+
+            &-img {
+                position: absolute;
+                top: 6px;
+                left: -25px;
+            }
+        }
+    }
+    .info {
+        padding: 15px 30px 15px 35px;
+        display: flex;
+        font-size: 15px;
+        line-height: 30px;
+        position: relative;
+        font-weight: 400;
+        color: #6f7d8d;
+
+        .info__price {
+            padding: 0px 18px;
+            background-color: #e6f1fd;
+            border-radius: 50px;
+            color: #ffffff;
+            margin-right: 32px;
+            color: $light__blue;
+            font-weight: 500;
+        }
+
+        .info__span {
+            color: $light__blue;
+            padding-left: 60px;
+        }
+
+        .info__span::before {
+            content: "";
+            background-image: url(../img/cart1.svg);
+            position: absolute;
+            width: 14px;
+            height: 14px;
+            right: 70px;
+            bottom: 24px;
+        }
+    }
+
+    .info__stars {
+        padding-left: 10px;
+    }
+
+    .info::before {
+        content: "";
+        background-image: url(../img/heart.svg);
+        width: 15px;
+        height: 15px;
+        position: absolute;
+        left: 110px;
+        top: 23px;
+        background-repeat: no-repeat;
+    }
 }
