--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -64,7 +64,7 @@
 
         &-noti::after {
             content: "25";
-            right: -3px;
+            right: -4.5px;
         }
 
         &-mail::before {
@@ -256,8 +256,7 @@
         }
     }
 }
-.create__search-click {
-}
+
 .create__search {
     display: block;
     padding: 40px;
@@ -430,7 +429,7 @@
 
     .slick-arrow {
         position: absolute;
-        top: -68px;
+        top: -78px;
         right: 0;
         border: none;
         background-color: #7347c1;
@@ -511,14 +510,10 @@
                 position: relative;
             }
 
-            .author__tech::before {
-                content: "";
-                background-image: url(../img/wordpres.svg);
-                width: 15px;
-                height: 15px;
+            .author__tech-img {
                 position: absolute;
-                top: 6px;
-                left: -22px;
+                top: 7px;
+                left: -25px;
             }
         }
         &-tags {
@@ -592,3 +587,96 @@
 }
 
 // products end
+// newest start
+
+.newest {
+    background-color: #f6f7fb;
+    max-height: 1730px;
+
+    .newest__inner-box {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    &__inner {
+        padding-top: 120px;
+        padding-bottom: 60px;
+    }
+
+    .newest__title {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+
+        .newest__filter {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 32px;
+            color: #747b86;
+            display: flex;
+        }
+
+        .newest__filter-dots {
+            position: relative;
+            bottom: -7px;
+            display: flex;
+            flex-direction: column;
+            padding-left: 25px;
+
+            .newest__filter-dot {
+                width: 4px;
+                height: 4px;
+                border-radius: 50%;
+                background-color: #a3b1c4;
+                margin-bottom: 4px;
+            }
+        }
+    }
+
+    &__tags {
+        background-color: #fff;
+        padding: 30px;
+        display: flex;
+        justify-content: space-between;
+        font-weight: 400;
+        border-radius: 5px;
+        -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+        -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+        box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+        margin-bottom: 20px;
+    }
+
+    &__tag {
+        padding: 0 20px;
+        background-color: #f1f3f6;
+        border: none;
+        font-size: 15px;
+        line-height: 30px;
+        border-radius: 50px;
+        outline: none;
+        cursor: pointer;
+        color: #747b86;
+        transition: linear 0.5s;
+
+        &:hover {
+            background-color: $light__blue;
+            color: #ffffff;
+        }
+    }
+
+    .newest__tag-bottom {
+        background-color: $light__blue;
+        color: #ffffff;
+        margin: 60px auto;
+        display: flex;
+        padding: 11px 35px;
+
+        &:hover {
+            background-color: #f1f3f6;
+            color: #747b86;
+        }
+    }
+}
+
+// newest end
