--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -59,6 +59,8 @@ body {
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     position: relative;
 
     .more,
@@ -66,6 +68,7 @@ body {
         display: none;
         width: 0;
         height: 0;
+        outline: none;
         
     }
 
@@ -93,7 +96,7 @@ body {
         }
 
         .more {
-            padding: 13px 26px;
+            padding: 13px 30px;
         }
 
         .live {
@@ -136,6 +139,7 @@ body {
 
     .author {
         display: flex;
+        outline: none;
         .author__img {
             width: 30px;
             height: 30px;
