--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -609,20 +609,47 @@
         justify-content: space-between;
         margin-bottom: 30px;
 
-        .newest__filter {
+        .newest__click {
             font-weight: 400;
             font-size: 16px;
             line-height: 32px;
             color: #747b86;
-            display: flex;
+            cursor: pointer;
+            max-height: 30px;
+
+            .newest__filters {
+                display: none;
+                flex-direction: column;
+                right: 194px;
+                padding: 5px 50px 5px 15px;
+                margin-top: 10px;
+                position: absolute;
+                background-color: #fff;
+                z-index: 1;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
+                border-bottom-left-radius: 5px;
+                -webkit-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+                -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+                box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+            }
+
+            .newest__filter {
+                padding: 2px;
+                transition: linear 0.5s;
+
+                &:hover {
+                    color: $light__blue;
+                }
+            }
         }
 
         .newest__filter-dots {
             position: relative;
-            bottom: -7px;
-            display: flex;
+            bottom: 25px;
             flex-direction: column;
-            padding-left: 25px;
+            padding-left: 85px;
 
             .newest__filter-dot {
                 width: 4px;
@@ -641,9 +668,9 @@
         justify-content: space-between;
         font-weight: 400;
         border-radius: 5px;
-        -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
-        -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
-        box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+        -webkit-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+        -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
         margin-bottom: 20px;
     }
 
@@ -768,7 +795,6 @@
 
             img {
                 padding: 8px 0 35px;
-
             }
         }
 
@@ -778,7 +804,6 @@
             img {
                 padding: 15px 0 40px;
             }
-
         }
 
         &-smile {
@@ -794,6 +819,152 @@
 
             img {
                 padding: 13px 0 33px;
+            }
+        }
+    }
+}
+
+// statistics end
+// advantages start
+
+.advantages {
+    max-height: 1190px;
+    font-weight: 400;
+
+    &__inner {
+        text-align: center;
+        padding-top: 120px;
+    }
+
+    &__title {
+        font-size: 36px;
+        line-height: 28px;
+        padding-bottom: 25px;
+
+        &-span {
+            color: $light__blue;
+        }
+    }
+
+    &__text {
+        font-size: 16px;
+        line-height: 30px;
+        padding: 0 250px;
+        color: #555555;
+        padding-bottom: 55px;
+    }
+
+    &__block-inner {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding-bottom: 120px;
+    }
+
+    &__block {
+        max-width: 360px;
+        -webkit-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+        -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+        margin-bottom: 30px;
+
+        &-num {
+            display: flex;
+            font-weight: 300;
+            font-size: 48px;
+            opacity: 0.2;
+            color: #5c87f8;
+            padding: 7px 0 0 18px;
+        }
+
+        &-img {
+            padding-bottom: 38px;
+            margin-top: -10px;
+        }
+
+        &-img--lock {
+            margin-top: -13px;
+        }
+
+        &-img--magic {
+            padding-bottom: 23px;
+        }
+
+        &-img--phone {
+            padding-bottom: 48px;
+        }
+
+        &-title {
+            font-size: 24px;
+            padding-bottom: 25px;
+        }
+
+        &-title--magic {
+            padding-bottom: 30px;
+        }
+
+        &-text {
+            font-size: 16px;
+            line-height: 30px;
+            color: #555555;
+            padding: 0 33px 60px;
+        }
+    }
+}
+
+// advantages end
+
+.sell {
+    display: flex;
+    justify-content: space-around;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 560px;
+    text-align: center;
+
+    &__inner {
+        padding-top: 100px;
+        font-weight: 400;
+        color: #ffffff;
+        display: flex;
+    }
+
+    &__piece {
+        line-height: 30px;
+        padding: 0 185px;
+        font-size: 16px;
+        &-title {
+            font-size: 36px;
+            padding: 45px 0 33px;
+        }
+
+        &-text {
+            max-width: 580px;
+            padding-bottom: 37px;
+        }
+
+        &-link {
+            line-height: 72px;
+            background-color: #ffffff;
+            padding: 17px 24px;
+            border-radius: 50px;
+            color: $light__blue;
+            transition: linear 0.5s;
+
+            &:hover {
+                background-color: #7347c1;
+                color: #ffffff;
+            }
+        }
+
+        &-link--start {
+            color: #7347c1;
+            transition: linear 0.5s;
+
+            &:hover {
+                background-color: $light__blue;
+                color: #ffffff;
             }
         }
     }
