--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,6 +1,16 @@
 
 @font-face {
     font-family: "Quicksand";
+    src: url("../fonts/Quicksand-Light.woff2") format("woff2"), 
+    url("../fonts/Quicksand-Light.woff") format("woff"),
+        url("../fonts/Quicksand-Light.ttf") format("truetype");
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Quicksand";
     src: url("../fonts/Quicksand-Regular.woff2") format("woff2"), url("../fonts/Quicksand-Regular.woff") format("woff"),
         url("../fonts/Quicksand-Regular.ttf") format("truetype");
     font-style: normal;
