--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -31,6 +31,13 @@ body {
     padding: 0 15px;
 }
 
+.container-fluid {
+    max-width: 1950px;
+    width: 100%;
+    margin: 0 auto;
+    // padding: 0 15px;
+}
+
 .title {
     font-family: $font;
     font-size: 30px;
@@ -39,9 +46,9 @@ body {
     padding: 40px 30px;
     background-color: #ffffff;
     border-radius: 5px;
-    -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
-    -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
-    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
 }
 
 .rate-star {
@@ -54,9 +61,9 @@ body {
     margin-top: 30px;
     background-color: #fff;
     max-width: 360px;
-    -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
-    -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
-    box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.33);
+    -webkit-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -69,11 +76,9 @@ body {
         width: 0;
         height: 0;
         outline: none;
-        
     }
 
     &:hover {
-        
         .more,
         .live {
             display: flex;
