--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -913,6 +913,7 @@
 }
 
 // advantages end
+// sell start
 
 .sell {
     display: flex;
@@ -969,3 +970,115 @@
         }
     }
 }
+
+// sell end
+// feedback start
+
+.feedback {
+    font-weight: 400;
+
+    &__inner {
+        padding-top: 120px;
+        text-align: center;
+        margin-bottom: 120px;
+    }
+
+    &__title {
+        font-size: 36px;
+        line-height: 28px;
+        padding: 35px;
+
+        span {
+            color: $light__blue;
+        }
+    }
+
+    &__text {
+        font-size: 16px;
+        line-height: 30px;
+        color: #555555;
+        padding-bottom: 60px;
+        max-width: 675px;
+        margin: 0 auto;
+    }
+
+    &__box {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 60px;
+    }
+
+    &__item {
+        max-width: 555px;
+        border-left: 2px solid $light__blue;
+        padding-left: 40px;
+        padding-top: 50px;
+        -webkit-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+        -moz-box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+        box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.25);
+
+        &-top {
+            display: flex;
+            flex-direction: row;
+
+            &::after {
+                content: "";
+                background-image: url(../img/bubble.svg);
+                width: 57px;
+                height: 51px;
+                position: relative;
+                left: 155px;
+            }
+        }    
+
+        &-link {
+            display: flex;
+        }
+        &-img {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            margin-bottom: 30px;
+        }
+
+        &-name {
+            font-size: 20px;
+            line-height: 7.2px;
+            color: #000;
+            padding: 14px 20px 25px;
+        }
+
+        &-profession {
+            font-size: 16px;
+            line-height: 7.2px;
+            color: #555555;
+        }
+
+        &-text {
+            font-size: 16px;
+            line-height: 30px;
+            color: #555555;
+            text-align: left;
+            padding-bottom: 50px;
+            padding-right: 40px;
+        }
+    }
+
+    &__btn {
+        background-color: $light__blue;
+        color: #ffffff;
+        font-size: 16px;
+        line-height: 72%;
+        padding: 18px 34px;
+        border-radius: 50px;
+        transition: linear 0.5s;
+
+        &:hover {
+            background-color: #fff;
+            color: $light__blue;
+            border: 1px solid $light__blue;
+        }
+    }
+}
+
+// feedback end
